--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "quqfin"
 version = "0.1.0"
 description = "A quantum-accelerated quantitative finance library"
-authors = [{name = "Your Name", email = "your.email@example.com"}]
+authors = [{name = "Shiwen An", email = "sweynan@icloud.com"}]
 readme = "README.md"
 requires-python = ">=3.8"
 dependencies = [
